docker/react-web/k8s/clusterip.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: react-web-dev-clusterip

spec:
  type: ClusterIP
  selector: { app: "react-web", env: "dev" }
  ports:
  - { name: "dev", protocol: "TCP", port: 3102, targetPort: 80 }


---
apiVersion: v1
kind: Service

metadata:
  name: react-web-test-clusterip

spec:
  type: ClusterIP
  selector: { app: "react-web", env: "test"}
  ports:
  - { name: "test", protocol: "TCP", port: 3103, targetPort: 80 }
